# dromaius

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dromaius.data  dromaius.js  dromaius.wasm  index.html
.github/workflows/: cmake.yml  deploy.yml
docs/: building.md  todo.md
gui/: dromaius.data  dromaius.js  dromaius.wasm  dromaius.worker.js  index.html
htmlview/: index.html
htmlview/css/: style.css
htmlview/js/: circuit_view.js  entrypoint.js  main.js  panel.js  panel_clock.js  panel_disk2031.js
htmlview/js/jspanel/: jspanel.js
htmlview/js/jspanel/extensions/contextmenu/: jspanel.contextmenu.js
htmlview/js/jspanel/extensions/datepicker/: jspanel.datepicker.js
htmlview/wasm/: htmlview.data  htmlview.js  htmlview.wasm
libs/glad/: glad.c  glad.h
libs/gtkwave/: lxt_write.c  lxt_write.h
libs/nuklear/: main.c  nuklear_glfw_gl3.h  nuklear_std.h
libs/stb/: stb_impl.c
runtime/: .gitignore
runtime/commodore_pet/: .gitignore
runtime/commodore_pet/d64/: test.d64
runtime/minimal_6502/: Makefile  rom_dayofweek.s  rom_test.s  simple.cfg
src/: chip.h  chip_6520.c  chip_6520.h  chip_6522.c  chip_6522.h  chip_74xxx.c  chip_74xxx.h  chip_dummy.c  chip_dummy.h  chip_hd44780.c  chip_hd44780.h  chip_hd44780_a00.inc  chip_mc3446a.c  chip_mc3446a.h  chip_oscillator.c  chip_oscillator.h  chip_poweronreset.c  chip_poweronreset.h  chip_ram_dynamic.c  chip_ram_dynamic.h  chip_ram_static.c  chip_ram_static.h  chip_rom.c  chip_rom.h  clock.c  clock.h  context.c  context.h  cpu.h  cpu_6502.c  cpu_6502.h  cpu_6502_opcodes.h  crt.h  dev_commodore_pet.c  dev_commodore_pet.h  dev_minimal_6502.c  dev_minimal_6502.h  device.c  device.h  display_pet_crt.c  (+45 more)
src/gui/: config.cpp  config.h  emscripten_minimal.html  imgui_ex.cpp  imgui_ex.h  main.cpp  main_gui.c  main_gui.cpp  panel.h  panel_chip_6520.c  panel_chip_6520.cpp  panel_chip_6520.h  panel_chip_6522.cpp  panel_chip_6522.h  panel_chip_hd44780.c  panel_chip_hd44780.cpp  panel_chip_hd44780.h  panel_clock.c  panel_clock.cpp  panel_clock.h  panel_control.c  panel_control.cpp  panel_control.h  panel_cpu_6502.c  panel_cpu_6502.cpp  panel_cpu_6502.h  panel_datassette.cpp  panel_datassette.h  panel_dev_commodore_pet.cpp  panel_dev_commodore_pet.h  panel_dev_minimal_6502.cpp  panel_dev_minimal_6502.h  panel_disk_2031.cpp  panel_disk_2031.h  panel_display_rgba.cpp  panel_display_rgba.h  panel_ieee488_tester.cpp  panel_ieee488_tester.h  panel_input_keypad.cpp  panel_input_keypad.h  (+25 more)
src/htmlview/: index.html
src/htmlview/api/: api.c  api.cpp
src/htmlview/css/: style.css
src/htmlview/js/: circuit_view.js  emscripten.js  entrypoint.js  main.js  panel.js  panel_breakpoints_signal.js  panel_clock.js  panel_cpu_6502.js  panel_datassette.js  panel_keyboard.js  panel_screen.js  panel_signal_details.js
src/htmlview/js/jspanel/extensions/dock/: jspanel.dock.js
src/htmlview/js/jspanel/extensions/hint/: jspanel.hint.js
src/htmlview/js/jspanel/extensions/layout/: jspanel.layout.js
src/htmlview/js/jspanel/extensions/modal/: jspanel.modal.js
src/htmlview/js/jspanel/extensions/tooltip/: jspanel.tooltip.js
src/htmlview/scripts/: fixup_svg_keyboard.py  fixup_svg_schematic.py  wasm-server.py
src/runtime/: .gitignore
src/runtime/minimal_6502/: Makefile  constants.inc  kernel.inc  kernel.s  rom_dayofweek.s  rom_test_lcd.s  rom_test_pia.s  simple.cfg  test_keypad.s
src/sys/: atomics.h  threads.c  threads.h
src/test/: fixture_chip.c  fixture_chip.h  test_atomics.c  test_chip_6520.c  test_chip_6522.c  test_chip_74xxx.c  test_chip_hd44780.c  test_chip_mc3446a.c  test_chip_oscillator.c  test_chip_poweronreset.c  test_chip_ram_dynamic.c  test_chip_ram_static.c  test_chip_rom.c  test_clock.c  test_cpu_6502.c  test_dev_commodore_pet.c  test_dev_minimal_6502.c  test_device.c  test_filt_6502_asm.c  test_input_keypad.c  test_main.c  test_ram_8d_16a.c  test_rom_8d_16a.c  test_signal.c  test_signal_history.c  test_signal_line.c  test_simulator.c  test_utils.c
src/tools/speedtest/: speedtest_main.cpp
